// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransferComponent step = 0 1`] = `
<div
  className="MuiGrid-container-3 MuiGrid-direction-xs-column-6"
>
  <WithStyles(Grid)
    item={true}
  >
    <WithStyles(MyStepper)
      actionType="transfer"
      step={0}
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
  >
    <WithStyles(Grid)
      alignItems="center"
      container={true}
      direction="column"
    >
      <WithStyles(Grid)
        className="TransferComponent-subComponent-2"
        item={true}
      >
        <Connect(WalletSelectionContainer) />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`TransferComponent step = 1 1`] = `
<div
  className="MuiGrid-container-3 MuiGrid-direction-xs-column-6"
>
  <WithStyles(Grid)
    item={true}
  >
    <WithStyles(MyStepper)
      actionType="transfer"
      step={1}
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
  >
    <WithStyles(Grid)
      alignItems="center"
      container={true}
      direction="column"
    >
      <WithStyles(Grid)
        className="TransferComponent-subComponent-2"
        item={true}
      >
        <Connect(RecipientContainer) />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`TransferComponent step = 2 1`] = `
<div
  className="MuiGrid-container-3 MuiGrid-direction-xs-column-6"
>
  <WithStyles(Grid)
    item={true}
  >
    <WithStyles(MyStepper)
      actionType="transfer"
      step={2}
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
  >
    <WithStyles(Grid)
      alignItems="center"
      container={true}
      direction="column"
    >
      <WithStyles(Grid)
        className="TransferComponent-subComponent-2"
        item={true}
      >
        <Connect(ReviewContainer) />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`TransferComponent step = 3 1`] = `
<div
  className="MuiGrid-container-3 MuiGrid-direction-xs-column-6"
>
  <WithStyles(Grid)
    item={true}
  >
    <WithStyles(MyStepper)
      actionType="transfer"
      step={3}
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
  >
    <WithStyles(Grid)
      alignItems="center"
      container={true}
      direction="column"
    >
      <WithStyles(Grid)
        className="TransferComponent-subComponent-2"
        item={true}
      >
        <Connect(ReceiptContainer) />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`TransferComponent step = 4 1`] = `
<div
  className="MuiGrid-container-3 MuiGrid-direction-xs-column-6 TransferComponent-rootReceipt-1"
>
  <WithStyles(Grid)
    item={true}
  />
  <WithStyles(Grid)
    item={true}
  >
    <WithStyles(Grid)
      alignItems="center"
      container={true}
      direction="column"
    >
      <WithStyles(Grid)
        className="TransferComponent-subComponent-2"
        item={true}
      />
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;
